[FEAT] Plan Controller + Service (get, 모임 참가, 모임 탈퇴 )